[package]
name = "pdftk"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
lopdf = "0.37"
pdf = "0.9"
aes = "0.8"
aes-gcm = "0.10"
rsa = "0.9"
sha2 = "0.10"
md5 = "0.8"
rc4 = "0.1"
thiserror = "2.0"
anyhow = "1.0"
serde_json = "1.0"
base64 = "0.22"
chrono = "0.4"
regex = "1.10"
encoding_rs = "0.8"
flate2 = "1.0"
rand = "0.9"

[[bin]]
name = "pdftk-rs"
path = "src/cli.rs"

[lib]
name = "libpdftk"
path = "src/lib.rs"

[profile.release]
lto = false
strip = true
panic = 'abort'
opt-level = 3
codegen-units = 1